set(MCRL2_TOOLS
  besinfo
  bespp
  diagraphica
  lps2lts
  lps2pbes
  lps2torx
  lpsactionrename
  lpsbinary
  lpsconfcheck
  lpsconstelm
  lpsinfo
  lpsinvelm
  lpsparelm
  lpsparunfold
  lpspp
  lpsrewr
  lpssumelm
  lpssuminst
  lpsuntime
  lpssim
  lpsxsim
  lts2lps
  lts2pbes
  ltsconvert
  ltscompare
  ltsgraph
  ltsinfo
  ltsview
  mcrl2-gui
  mcrl22lps
  mcrl2i
  mcrl2xi
  pbes2bool
  pbes2bes
  pbesconstelm
  pbesinfo
  pbesparelm
  pbespgsolve
  pbespp
  pbesrewr
  tracepp
  txt2pbes
  txt2lps

  besconvert
  bessolve
  complps2pbes
  lpsbisim2pbes
  lpsrealelm
  lpsrealzone
  pbesabstract
  pbesabsinthe
  pbesinst
  pbespareqelm
  pbesstategraph
  symbolic_exploration
  txt2bes
  formulacheck

  lpstransform
  mcrl2transform
  mcrl2parse
  pbestransform
  
  ltspbisim
)

foreach(TOOL ${MCRL2_TOOLS})
  add_subdirectory(${TOOL})
endforeach()
