mcrl2_add_library(mcrl2_lps
  SOURCES
    lps.cpp
    lps_io.cpp
    tools.cpp
    linearise.cpp
    lpsparunfoldlib.cpp
    symbolic_lts.cpp
    symbolic_lts_bdd.cpp
    symbolic_lts_io.cpp
  DEPENDS
    mcrl2_core
    mcrl2_data
    mcrl2_process
    mcrl2_smt
    mcrl2_symbolic
    Boost::boost
)

add_subdirectory(example)
